# robot

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Robot.vs17.sln  Robot.vs19.sln  TODO.md
Source/: Makefile  Mouse.cc  Robot.vs17.vcxproj  Robot.vs19.vcxproj
Test/: Peon.vs17.vcxproj  Peon.vs19.vcxproj  Test.vs17.vcxproj  Test.vs19.vcxproj
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/robot/: Bounds.h  Clipboard.h  Color.h  Enum.h  Global.h.in  Hash.h  Image.h  Keyboard.h  Memory.h  Module.h  Mouse.h  Point.h  Process.h  Range.h  Robot.h  Screen.h  Size.h  Timer.h  Types.h  Window.h  cmake_init_robot.hpp
source/: Bounds.cc  Clipboard.cc  Color.cc  Hash.cc  Image.cc  Keyboard.cc  Memory.cc  Module.cc  Mouse.cc  Point.cc  Process.cc  Range.cc  Screen.cc  Size.cc  Timer.cc  Window.cc
test/: CMakeLists.txt
test/source/: Process.cc  Targa.h  Test.h
